@@ -8,6 +8,7 @@ import gtk
 import diagram
 import diacanvas
 import UML
+import gc
 
 def mainquit(*args):
     for k in UML.Element._hash.keys():
@@ -35,23 +36,28 @@ UML.Element_hash_gc()
 for k in UML.Element._hash.keys():
     print "Element", k, ":", UML.Element._hash[k]().__dict__
 
+print "diagram creating"
 dia = diagram.Diagram()
-
+print "diagram created"
 #item = canvas.root.add (diagram.Comment)
 #item.move (30, 50)
-#item = dia.create_item (diagram.Comment, (10,10))
-
 #item = canvas.root.add (diagram.Actor)
 #item.move (150, 50)
 item = dia.create_item (diagram.Actor, (150, 50))
 actor = item.get_subject()
-actor.name = "Actor"
-#item.set(name="Some text")
-del actor
-#item = dia.create_item (diagram.UseCase, (50, 150))
+#actor.name = "Actor"
+item.set(name="Actor")
 
-item = dia.canvas.root.add(diacanvas.CanvasLine, add_point=(0, 0))
-item.set (add_point=(100,100))
+item = dia.create_item (diagram.UseCase, (50, 150))
+usecase = item.get_subject()
+dia.create_item (diagram.UseCase, (50, 200), usecase)
+
+item = dia.create_item (diagram.Generalization, (150, 50))
+item = dia.create_item (diagram.CommentLine, (150, 50))
+
+item = dia.create_item (diagram.Comment, (10,10))
+comment = item.get_subject()
+
 del item
 
 #view = diacanvas.CanvasView().set_canvas (dia.canvas)
@@ -64,13 +70,24 @@ print "diagram displayed"
 
 gtk.main()
 
-print "Garbage collection after gtk.main() has finished:"
-UML.Element_hash_gc()
-for k in UML.Element._hash.keys():
-    print "Element", k, ":", UML.Element._hash[k]().__dict__
-
+#print "Comment.ann.Elem.:", comment.annotatedElement.list
+#print "Actor.comment:", actor.comment.list
+#print "UseCase.comment:", usecase.comment.list
+print "Comment.presentation:", comment.presentation.list
+print "Actor.presentation:", actor.presentation.list
+print "UseCase.presentation:", usecase.presentation.list
+print "removing diagram..."
 del dia
-print "removed Diagram:"
+gc.collect()
+print "Comment.presentation:", comment.presentation.list
+print "Actor.presentation:", actor.presentation.list
+print "UseCase.presentation:", usecase.presentation.list
+del actor
+del usecase
+del comment
+#del dia
+
+print "Garbage collection after gtk.main() has finished:"
 UML.Element_hash_gc()
 for k in UML.Element._hash.keys():
     print "Element", k, ":", UML.Element._hash[k]().__dict__
